CMake fix for Eigen

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,14 +11,14 @@ find_package( Ceres REQUIRED )
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
-set(LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs CACHE PATH "Path to lib folder")
+set(LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../libs CACHE PATH "Path to lib folder")
 set(Eigen3_INCLUDE_DIR ${LIBRARY_DIR}/eigen-3.4/ CACHE PATH "Path to Eigen source folder")
 
 #############################################################################################
 # Header / Source Files
 
 set(HEADERS
-        src/Eigen.h)
+        Eigen.h)
 
 # same for Sources later
 
@@ -28,8 +28,9 @@ set(HEADERS
 
 
 
-add_executable(main src/main.cpp ${HEADERS} )
-add_executable(test_loading src/test_loading.cpp ${HEADERS} )
+add_executable(main main.cpp ${HEADERS} )
+
+add_executable(test_loading test_loading.cpp ${HEADERS} )
 
 
 #############################################################################################
@@ -37,6 +38,8 @@ add_executable(test_loading src/test_loading.cpp ${HEADERS} )
 
 target_link_libraries(main ${OpenCV_LIBS})
 target_link_libraries(test_loading ${OpenCV_LIBS})
+target_include_directories(main PUBLIC ${Eigen3_INCLUDE_DIR})
+target_include_directories(test_loading PUBLIC ${Eigen3_INCLUDE_DIR})
 
 #target_link_libraries(dragon ceres)
 #target_link_libraries(surface ceres)
