--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ set(HEADERS
 #add_executable(main main.cpp ${HEADERS} )
 
 add_executable(test_loading test_loading.cpp ${HEADERS} )
+add_executable(keypoints keypoints.cpp ${HEADERS})
 
 
 #############################################################################################
@@ -36,8 +37,10 @@ add_executable(test_loading test_loading.cpp ${HEADERS} )
 
 #target_link_libraries(main ${OpenCV_LIBS})
 target_link_libraries(test_loading ${OpenCV_LIBS})
+target_link_libraries(keypoints ${OpenCV_LIBS})
 #target_include_directories(main PUBLIC ${Eigen3_INCLUDE_DIR})
 target_include_directories(test_loading PUBLIC ${Eigen3_INCLUDE_DIR})
+target_include_directories(keypoints PUBLIC ${Eigen3_INCLUDE_DIR})
 
 #target_link_libraries(dragon ceres)
 #target_link_libraries(surface ceres)
