--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,10 +23,11 @@ set(HEADERS
     SimpleMesh.h
     BundleAdjustment.h
     data_loader.h
-    data.h)
+    data.h
+    reconstruction.h)
 
 set(SOURCES
-    directory.cpp eight_point.cpp data_loader.cpp data.cpp)
+    directory.cpp eight_point.cpp data_loader.cpp data.cpp reconstruction.cpp)
 
 #############################################################################################
 # Executables
@@ -34,6 +35,7 @@ set(SOURCES
 add_executable(test_loading test_loading.cpp ${HEADERS} ${SOURCES})
 add_executable(keypoints keypoints.cpp ${HEADERS} ${SOURCES})
 add_executable(test_bundle_adjustment test_bundle_adjustment.cpp ${HEADERS} ${SOURCES})
+#add_executable(reconstruction reconstruction.cpp ${HEADERS} ${SOURCES})
 
 
 #############################################################################################
@@ -43,12 +45,13 @@ add_executable(test_bundle_adjustment test_bundle_adjustment.cpp ${HEADERS} ${SO
 target_link_libraries(test_loading ${OpenCV_LIBS})
 target_link_libraries(keypoints ${OpenCV_LIBS})
 target_link_libraries(test_bundle_adjustment ${OpenCV_LIBS})
+#target_link_libraries(reconstruction ${OpenCV_LIBS})
 
 #target_include_directories(main PUBLIC ${Eigen3_INCLUDE_DIR})
 target_include_directories(test_loading PUBLIC ${Eigen3_INCLUDE_DIR})
 target_include_directories(keypoints PUBLIC ${Eigen3_INCLUDE_DIR})
 target_include_directories(test_bundle_adjustment PUBLIC ${Eigen3_INCLUDE_DIR})
+#target_include_directories(reconstruction PUBLIC ${Eigen3_INCLUDE_DIR})
 
 target_link_libraries(test_bundle_adjustment ceres)
 target_link_libraries(keypoints ceres)
-#target_link_libraries(surface ceres)
