--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,7 @@ set(SOURCES
 add_executable(test_loading test_loading.cpp ${HEADERS} ${SOURCES})
 add_executable(keypoints keypoints.cpp ${HEADERS} ${SOURCES})
 add_executable(test_bundle_adjustment test_bundle_adjustment.cpp ${HEADERS} ${SOURCES})
+add_executable(test_reconstruction test_reconstruction.cpp ${HEADERS} ${SOURCES})
 #add_executable(reconstruction reconstruction.cpp ${HEADERS} ${SOURCES})
 
 
@@ -49,17 +50,24 @@ add_executable(test_bundle_adjustment test_bundle_adjustment.cpp ${HEADERS} ${SO
 target_link_libraries(test_loading ${OpenCV_LIBS})
 target_link_libraries(keypoints ${OpenCV_LIBS})
 target_link_libraries(test_bundle_adjustment ${OpenCV_LIBS})
+target_link_libraries(test_reconstruction ${OpenCV_LIBS})
+
 #target_link_libraries(reconstruction ${OpenCV_LIBS})
 
 #target_include_directories(main PUBLIC ${Eigen3_INCLUDE_DIR})
 target_include_directories(test_loading PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
 target_include_directories(keypoints PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
 target_include_directories(test_bundle_adjustment PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
+target_include_directories(test_reconstruction PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
+
 #target_include_directories(reconstruction PUBLIC ${Eigen3_INCLUDE_DIR})
 
 target_link_libraries(test_bundle_adjustment ceres)
+target_link_libraries(keypoints ceres)
+
 target_link_libraries(test_loading ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
 target_link_libraries(keypoints ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
 target_link_libraries(test_bundle_adjustment ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
+target_link_libraries(test_reconstruction ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
 
-target_link_libraries(keypoints ceres)
+
