Refactor:  - Eigen include in CmakeLists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,12 +6,15 @@ set( CMAKE_CXX_STANDARD 17 )
 
 #############################################################################################
 # Package Requirements
-find_package( Ceres REQUIRED )
-find_package( OpenCV REQUIRED )
-include_directories( ${OpenCV_INCLUDE_DIRS} )
+find_package(Ceres REQUIRED)
+find_package(OpenCV REQUIRED)
+find_package(Eigen3 REQUIRED NO_MODULE)
+
+include_directories(${OpenCV_INCLUDE_DIRS})
+include_directories(${OpenCV_INCLUDE_DIRS})
+include_directories(${EIGEN_INCLUDE_DIR})
 
 set(LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../libs CACHE PATH "Path to lib folder")
-set(Eigen3_INCLUDE_DIR ${LIBRARY_DIR}/eigen-3.4/ CACHE PATH "Path to Eigen source folder")
 
 set(Midd_SDK_INCLUDE_DIR ${LIBRARY_DIR}/MiddEval3/code/ CACHE PATH "Path to Middleburry SDK")
 set(imageLib_INCLUDE_DIR ${LIBRARY_DIR}/MiddEval3/code/imageLib/ CACHE PATH "Path to imageLib inside Middlebury SDK")
@@ -53,16 +56,17 @@ add_executable(rectification rectification_main.cpp ${HEADERS} ${SOURCES})
 # Linking
 
 # OpenCV
-target_link_libraries(test_loading ${OpenCV_LIBS})
-target_link_libraries(test_keypoints ${OpenCV_LIBS})
-target_link_libraries(test_bundle_adjustment ${OpenCV_LIBS})
-target_link_libraries(test_reconstruction ${OpenCV_LIBS})
+target_link_libraries(test_loading ${OpenCV_LIBS} Eigen3::Eigen)
+target_link_libraries(test_keypoints ${OpenCV_LIBS} Eigen3::Eigen)
+target_link_libraries(test_bundle_adjustment ${OpenCV_LIBS} Eigen3::Eigen)
+target_link_libraries(test_reconstruction ${OpenCV_LIBS} Eigen3::Eigen)
+target_link_libraries(rectification ${OpenCV_LIBS} Eigen3::Eigen)
 
 # Eigen / imageLib
-target_include_directories(test_loading PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
-target_include_directories(test_keypoints PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
-target_include_directories(test_bundle_adjustment PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
-target_include_directories(test_reconstruction PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
+target_include_directories(test_loading PUBLIC ${imageLib_INCLUDE_DIR})
+target_include_directories(test_keypoints PUBLIC ${imageLib_INCLUDE_DIR})
+target_include_directories(test_bundle_adjustment PUBLIC ${imageLib_INCLUDE_DIR})
+target_include_directories(test_reconstruction PUBLIC ${imageLib_INCLUDE_DIR})
 target_include_directories(rectification PUBLIC ${imageLib_INCLUDE_DIR})
 
 if (APPLE)
