Refactorings and full pipeline

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,7 @@ add_executable(test_keypoints Tests/test_keypoints.cpp ${HEADERS} ${SOURCES})
 add_executable(test_bundle_adjustment Tests/test_bundle_adjustment.cpp ${HEADERS} ${SOURCES})
 add_executable(test_reconstruction Tests/test_reconstruction.cpp ${HEADERS} ${SOURCES})
 add_executable(rectification rectification_main.cpp ${HEADERS} ${SOURCES})
+add_executable(main main.cpp ${HEADERS} ${SOURCES})
 
 #############################################################################################
 # Linking
@@ -60,6 +61,7 @@ target_link_libraries(test_keypoints ${OpenCV_LIBS})
 target_link_libraries(test_bundle_adjustment ${OpenCV_LIBS})
 target_link_libraries(test_reconstruction ${OpenCV_LIBS})
 target_link_libraries(rectification ${OpenCV_LIBS})
+target_link_libraries(main ${OpenCV_LIBS})
 target_link_libraries(rectification Eigen3::Eigen)
 
 # Eigen / imageLib
@@ -67,6 +69,7 @@ target_include_directories(test_loading PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_
 target_include_directories(test_keypoints PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
 target_include_directories(test_bundle_adjustment PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
 target_include_directories(test_reconstruction PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
+target_include_directories(main PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
 target_include_directories(rectification PUBLIC ${imageLib_INCLUDE_DIR})
 
 target_link_libraries(test_loading ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
@@ -74,7 +77,9 @@ target_link_libraries(test_keypoints ${LIBRARY_DIR}/MiddEval3/code/imageLib/libI
 target_link_libraries(test_bundle_adjustment ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
 target_link_libraries(test_reconstruction ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
 target_link_libraries(rectification ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
+target_link_libraries(main ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
 
 # Ceres
 target_link_libraries(test_bundle_adjustment ceres)
 target_link_libraries(test_keypoints ceres)
+target_link_libraries(main ceres)
