--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -62,7 +62,7 @@ target_link_libraries(test_bundle_adjustment ${OpenCV_LIBS})
 target_link_libraries(test_reconstruction ${OpenCV_LIBS})
 target_link_libraries(rectification ${OpenCV_LIBS})
 target_link_libraries(main ${OpenCV_LIBS})
-target_link_libraries(rectification Eigen3::Eigen)
+target_link_libraries(rectification ${OpenCV_LIBS})
 
 # Eigen / imageLib
 target_include_directories(test_loading PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
@@ -70,7 +70,7 @@ target_include_directories(test_keypoints PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLi
 target_include_directories(test_bundle_adjustment PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
 target_include_directories(test_reconstruction PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
 target_include_directories(main PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
-target_include_directories(rectification PUBLIC ${imageLib_INCLUDE_DIR})
+target_include_directories(rectification PUBLIC ${Eigen3_INCLUDE_DIR} ${imageLib_INCLUDE_DIR})
 
 target_link_libraries(test_loading ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
 target_link_libraries(test_keypoints ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-g.a )
