--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,15 +8,18 @@ set( CMAKE_CXX_STANDARD 17 )
 # Package Requirements
 find_package( Ceres REQUIRED )
 find_package( OpenCV REQUIRED )
-find_package(Eigen3 REQUIRED NO_MODULE)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-include_directories(${EIGEN_INCLUDE_DIR})
+
+
+#include_directories(${EIGEN_INCLUDE_DIR})
+
 
 set(LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../libs CACHE PATH "Path to lib folder")
-set(Eigen3_INCLUDE_DIR ${EIGEN_INCLUDE_DIR} CACHE PATH "Path to Eigen source folder")
+set(Eigen3_INCLUDE_DIR ${LIBRARY_DIR}/eigen-3.4/ CACHE PATH "Path to Eigen source folder")
 
 set(Midd_SDK_INCLUDE_DIR ${LIBRARY_DIR}/MiddEval3/code/ CACHE PATH "Path to Middleburry SDK")
 set(imageLib_INCLUDE_DIR ${LIBRARY_DIR}/MiddEval3/code/imageLib/ CACHE PATH "Path to imageLib inside Middlebury SDK")
+
 
 #############################################################################################
 # Header / Source Files
@@ -83,3 +86,6 @@ target_link_libraries(main ${LIBRARY_DIR}/MiddEval3/code/imageLib/libImg.x86_64-
 target_link_libraries(test_bundle_adjustment ceres)
 target_link_libraries(test_keypoints ceres)
 target_link_libraries(main ceres)
+target_link_libraries(test_loading ceres)
+target_link_libraries(test_reconstruction ceres)
+target_link_libraries(rectification ceres)
